# Opus-Agent-Swarm-LLM-Framework

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPUS.WHITEPAPER0.01.docx  README.md  SECURITY.md  treasury-log.md  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: api.md  architecture.md  glossary.md  lineage.md  quickstart.md  release-notes-v2.md  tokenomics.md  whitepaper.md
lore/: README.md
lore/autogenesis/: README.md  _render.html
lore/colony-decisions/: 2026-05-19_autogenesis-live.md  README.md  (+3 more)
opus-core/: .env.example  README.md  pyproject.toml
opus-core/examples/: autogenesis_continuous.py  autogenesis_demo.py  hello_swarm.py  using_ollama.py  using_openai.py
opus-core/src/opus/: __init__.py  autogenesis.py  blackboard.py  cli.py  consensus.py  hive.py  introspection.py  provenance.py
opus-core/src/opus/agents/: base.py  critic.py  executor.py  judge.py  planner.py  researcher.py  scout.py  synthesiser.py  verifier.py
opus-core/src/opus/llm/: client.py
opus-core/src/opus/llm/providers/: __init__.py  anthropic.py  base.py  mock.py  ollama.py  openai.py
opus-core/src/opus/memory/: graph.py  vector.py
opus-core/src/opus/server/: __init__.py  app.py  ui.py
opus-core/tests/: test_blackboard.py  test_consensus.py  test_hive.py  test_introspection.py  test_providers.py  test_server.py
opus-web/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
scripts/: build_whitepaper_pdf.py
(+44 files in other folders)
